3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

lib/Makefile.in: add a 'archonly' directive that only collects archetypes
    and doesn't collect images.
lib/archetypes: rebuilt for fixes made to arches.
lib/collect.pl.in: modified to take second parameter -ARCHONLY, that causes
    it not to save out animation, bmaps and faces file.
server/apply.c: Change order of print when applying/unapplying - print out
    the 'you apply/unapply' before we print out the changes that applying
    the item does.  It seems odd for it to be 'you feel stronger.  you apply
    xyz'.  Fix can_apply_object() so that if a player needs to unapply
    several items, the right return code is returned and we don't say
    the player has a choice.
server/player.c: Fix missing clearing of player->next.
MSW 2002-07-15

-- Start body commit notes --
Major commit.  This adds body locations which is used for equipping items.
Equipment has information which body part it gets equipped to, and monsters
have information on how which body locations they can have.

As part of this work, I also did a lot of code cleanup.

To use this, you must use up to date archetypes - the ones included
in this commit are fine - just make sure you install them.  If
you don't, players will not be able to equip items.

common/arch.c: Initialize body_used to be same as body_info for
    archetypes - this way when monsters are created, they can
    start equipping items right away.
common/exp.c: update new_exp() - some flags it checked for before no longer
    exist or have new names.
common/info.c: describe_item() now takes second parameter - update 
    dump_abilities to use new calling convention.